<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4E5151"
    tools:context=".AlphaCalculator">


    <Button
        android:id="@+id/button_div3"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginBottom="10dp"
        android:background="#4E5151"
        android:foreground="?android:attr/selectableItemBackground"
        android:hapticFeedbackEnabled="true"
        android:onClick="onBracket"
        android:shadowColor="#984848"
        android:text="@string/button_leftbracket"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_div"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_div2"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="#4E5151"
        android:foreground="?android:attr/selectableItemBackground"
        android:hapticFeedbackEnabled="true"
        android:onClick="onBracket"
        android:shadowColor="#984848"
        android:text="@string/button_rightbracket"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_9"
        app:layout_constraintEnd_toStartOf="@+id/button_div3" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="#23698E"
        android:foreground="?android:attr/selectableItemBackground"
        android:hapticFeedbackEnabled="true"
        android:onClick="onBackspace"
        android:shadowColor="#4E5151"
        android:shadowRadius="0"
        android:text="@string/button_delete"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_8"
        app:layout_constraintEnd_toStartOf="@+id/button_div2"
        app:layout_constraintStart_toEndOf="@+id/button_clear" />

    <TextView
        android:id="@+id/txtInput"
        android:layout_width="0dp"
        android:layout_height="121dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:background="#3C3F41"
        android:ems="10"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="bottom|right"
        android:isScrollContainer="true"
        android:maxLength="200"
        android:scrollbars="vertical"
        android:scrollHorizontally="true"
        android:textColor="#F8F8F8"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button_sub"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:background="#4E5151"
        android:foreground="?android:attr/selectableItemBackground"
        android:hapticFeedbackEnabled="true"
        android:onClick="onOperator"
        android:shadowColor="#984848"
        android:text="@string/button_sub"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_5"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="#4E5151"
        android:foreground="?android:attr/selectableItemBackground"
        android:hapticFeedbackEnabled="true"
        android:onClick="onDigit"
        android:shadowColor="#984848"
        android:text="@string/button_5"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_2"
        app:layout_constraintEnd_toStartOf="@+id/button_6"
        app:layout_constraintStart_toEndOf="@+id/button_4" />

    <Button
        android:id="@+id/button_6"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="#4E5151"
        android:foreground="?android:attr/selectableItemBackground"
        android:hapticFeedbackEnabled="true"
        android:onClick="onDigit"
        android:shadowColor="#984848"
        android:text="@string/button_6"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_3"
        app:layout_constraintEnd_toStartOf="@+id/button_mul" />

    <Button
        android:id="@+id/button_3"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="#4E5151"
        android:foreground="?android:attr/selectableItemBackground"
        android:hapticFeedbackEnabled="true"
        android:onClick="onDigit"
        android:shadowColor="#984848"
        android:text="@string/button_3"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonEquals"
        app:layout_constraintEnd_toStartOf="@+id/button_add" />

    <Button
        android:id="@+id/buttonEquals"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="#303030"
        android:foreground="?android:attr/selectableItemBackground"
        android:hapticFeedbackEnabled="true"
        android:onClick="Bfilter"
        android:shadowColor="#984848"
        android:text="@string/button_equals"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_sub" />

    <Button
        android:id="@+id/button_7"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginBottom="10dp"
        android:background="#4E5151"
        android:foreground="?android:attr/selectableItemBackground"
        android:hapticFeedbackEnabled="true"
        android:onClick="onDigit"
        android:shadowColor="#984848"
        android:text="@string/button_7"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_4"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_8"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="#4E5151"
        android:foreground="?android:attr/selectableItemBackground"
        android:hapticFeedbackEnabled="true"
        android:onClick="onDigit"
        android:shadowColor="#984848"
        android:text="@string/button_8"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_5"
        app:layout_constraintEnd_toStartOf="@+id/button_9"
        app:layout_constraintStart_toEndOf="@+id/button_7" />

    <Button
        android:id="@+id/button_9"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="#4E5151"
        android:foreground="?android:attr/selectableItemBackground"
        android:hapticFeedbackEnabled="true"
        android:onClick="onDigit"
        android:shadowColor="#984848"
        android:text="@string/button_9"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_6"
        app:layout_constraintEnd_toStartOf="@+id/button_div" />

    <Button
        android:id="@+id/button_div"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginBottom="10dp"
        android:background="#4E5151"
        android:foreground="?android:attr/selectableItemBackground"
        android:hapticFeedbackEnabled="true"
        android:onClick="onOperator"
        android:shadowColor="#984848"
        android:text="@string/button_div"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_mul"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_mul"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginBottom="10dp"
        android:background="#4E5151"
        android:foreground="?android:attr/selectableItemBackground"
        android:hapticFeedbackEnabled="true"
        android:onClick="onOperator"
        android:shadowColor="#984848"
        android:text="@string/button_mul"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_add"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_add"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginBottom="10dp"
        android:background="#4E5151"
        android:foreground="?android:attr/selectableItemBackground"
        android:hapticFeedbackEnabled="true"
        android:onClick="onOperator"
        android:shadowColor="#984848"
        android:text="@string/button_add"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_sub"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_2"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="#4E5151"
        android:foreground="?android:attr/selectableItemBackground"
        android:hapticFeedbackEnabled="true"
        android:onClick="onDigit"
        android:shadowColor="#984848"
        android:text="@string/button_2"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_placeholder"
        app:layout_constraintEnd_toStartOf="@+id/button_3"
        app:layout_constraintStart_toEndOf="@+id/button_1" />

    <Button
        android:id="@+id/button_0"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:background="#4E5151"
        android:foreground="?android:attr/selectableItemBackground"
        android:hapticFeedbackEnabled="true"
        android:onClick="onDigit"
        android:shadowColor="#984848"
        android:text="@string/button_0"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_placeholder"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="#4E5151"
        android:foreground="?android:attr/selectableItemBackground"
        android:hapticFeedbackEnabled="true"
        android:onClick="onDecimalPoint"
        android:shadowColor="#984848"
        android:text="@string/button_decimal"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonEquals"
        app:layout_constraintStart_toEndOf="@+id/button_0" />

    <Button
        android:id="@+id/button_4"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginBottom="10dp"
        android:background="#4E5151"
        android:foreground="?android:attr/selectableItemBackground"
        android:hapticFeedbackEnabled="true"
        android:onClick="onDigit"
        android:shadowColor="#984848"
        android:text="@string/button_4"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_1"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginBottom="10dp"
        android:background="#4E5151"
        android:foreground="?android:attr/selectableItemBackground"
        android:hapticFeedbackEnabled="true"
        android:onClick="onDigit"
        android:shadowColor="#984848"
        android:text="@string/button_1"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_clear"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginBottom="10dp"
        android:background="#FF9800"
        android:foreground="?android:attr/selectableItemBackground"
        android:hapticFeedbackEnabled="true"
        android:onClick="onClear"
        android:shadowColor="#4E5151"
        android:shadowRadius="0"
        android:text="@string/button_clear"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_7"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>